--- a/app/src/main/res/layout/fragment_coffee_config.xml
+++ b/app/src/main/res/layout/fragment_coffee_config.xml
@@ -36,18 +36,23 @@
                 android:textColor="@color/primary_text"
                 android:textSize="16sp"
                 android:text="@string/product_name" />
-            <ImageView
+
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/tv_product_image"
                 android:layout_width="match_parent"
-                android:layout_height="128dp"
-                android:background="@drawable/bg_product_list"
-                android:paddingVertical="20dp"
-                android:src="@drawable/ic_product"/>
+                android:layout_height="200dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:src="@drawable/ic_product"
+                app:riv_corner_radius="20dp"
+                android:scaleType="centerCrop" />
+
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_total_price_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20sp"
             android:fontFamily="@font/poppins_bold"
