product descripotion added

--- a/app/src/main/res/layout/fragment_coffee_config.xml
+++ b/app/src/main/res/layout/fragment_coffee_config.xml
@@ -40,13 +40,33 @@
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/tv_product_image"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@drawable/ic_product"
                 app:riv_corner_radius="20dp"
                 android:scaleType="centerCrop" />
+
+            <TextView
+                android:id="@+id/tv_about_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:fontFamily="@font/poppins_medium"
+                android:textColor="@color/primary_text"
+                android:textSize="24sp"
+                android:text="@string/about_title" />
+            <TextView
+                android:id="@+id/tv_about_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:letterSpacing="0.05"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/poppins"
+                android:textColor="@color/secondary_text"
+                android:textSize="16sp"
+                android:text="@string/about_text" />
 
         </LinearLayout>
 
