--- a/app/src/main/res/layout/item_products_column.xml
+++ b/app/src/main/res/layout/item_products_column.xml
@@ -5,26 +5,24 @@
     android:background="@drawable/bg_product_list"
     android:layout_width="match_parent"
     android:layout_height="96dp"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp"
-    android:paddingHorizontal="10dp"
+    android:padding="10dp"
     android:layout_marginVertical="9dp">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/iv_product_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="76dp"
+        android:layout_height="0dp"
+        android:src="@drawable/ic_product"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_product"
-        tools:ignore="MissingConstraints" />
+        app:riv_corner_radius="10dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="12dp"
+        android:layout_marginHorizontal="15dp"
         android:gravity="center_vertical"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
