--- a/app/src/main/res/navigation/navgraph_authentication.xml
+++ b/app/src/main/res/navigation/navgraph_authentication.xml
@@ -17,9 +17,6 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
-        <action
-            android:id="@+id/action_welcomeFragment_to_mainActivity"
-            app:destination="@id/mainActivity" />
     </fragment>
     <fragment
         android:id="@+id/signInFragment"
@@ -33,22 +30,11 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"/>
-        <action
-            android:id="@+id/action_signInFragment_to_mainActivity"
-            app:destination="@id/mainActivity" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
         android:name="com.example.coffeehouse.ui.authentication.RegisterFragment"
         android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_register" >
-        <action
-            android:id="@+id/action_signUpFragment_to_mainActivity"
-            app:destination="@id/mainActivity" />
-    </fragment>
-    <activity
-        android:id="@+id/mainActivity"
-        android:name="com.example.coffeehouse.ui.main.MainActivity"
-        android:label="MainActivity" />
+        tools:layout="@layout/fragment_register" />
 
 </navigation>
