--- a/app/src/main/res/layout/fragment_menu_products.xml
+++ b/app/src/main/res/layout/fragment_menu_products.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.main.menu.categories.CoffeeFragment">
-
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginHorizontal="-8dp"
         android:id="@+id/rv_coffee"
         android:nestedScrollingEnabled="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="90dp"
+        android:clipToPadding="false"
         android:scrollbars="vertical"/>
 </FrameLayout>
