--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -75,6 +75,7 @@
 
         <androidx.viewpager2.widget.ViewPager2
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="-8dp"
             android:id="@+id/vp2_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
