--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/bt_buy_light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:background="@drawable/ic_buy"
                 android:backgroundTint="@color/primary"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -30,6 +31,19 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="MissingConstraints" />
 
+            <TextView
+                android:id="@+id/tv_cart_num"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@drawable/bg_circle"
+                android:backgroundTint="@color/red"
+                android:gravity="center"
+                android:text="@string/cart_list_num"
+                android:textColor="@color/white"
+                android:layout_marginTop="-10dp"
+                android:layout_marginEnd="-10dp"
+                app:layout_constraintEnd_toEndOf="@+id/bt_buy_light"
+                app:layout_constraintTop_toTopOf="@+id/bt_buy_light" />
             <TextView
                 android:id="@+id/tv_greeting"
                 android:layout_width="wrap_content"
