--- a/app/src/main/res/layout/item_products_column.xml
+++ b/app/src/main/res/layout/item_products_column.xml
@@ -33,10 +33,10 @@
             android:id="@+id/tv_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_medium"
+            android:fontFamily="@font/poppins_semibold"
             android:text="@string/add_title"
             android:textColor="@color/primary_text"
-            android:textSize="12sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_product_description"
