--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="placeholder">#C1C7D0</color>
     
     <color name="items_background">#f8f9fa</color>
+    <color name="icon_background">#F7F8FB</color>
     <color name="stroke">#D8D8D8</color>
 
     <color name="separator_color">#F4F5F7</color>
