--- a/app/src/main/res/layout/fragment_cart_recycle_view.xml
+++ b/app/src/main/res/layout/fragment_cart_recycle_view.xml
@@ -27,21 +27,26 @@
             android:layout_marginVertical="32dp"
             android:gravity="bottom">
 
-            <Button
-                android:id="@+id/btn_checkout"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_pay"
                 android:layout_width="163dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_primary"
+                android:textColor="@color/white"
                 android:text="@string/checkout"
+                android:textAllCaps="false"
+                app:icon="@drawable/ic_buy"
+                app:iconSize="18dp"
+                app:iconGravity="textStart"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/btn_checkout"
+                android:layout_above="@+id/btn_pay"
                 android:layout_alignParentStart="true"
                 android:layout_marginVertical="1dp"
                 android:fontFamily="@font/poppins_medium"
@@ -52,11 +57,11 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/tv_total_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/btn_checkout"
-                android:layout_alignEnd="@+id/btn_checkout"
+                android:layout_above="@+id/btn_pay"
+                android:layout_alignEnd="@+id/btn_pay"
                 android:layout_marginVertical="1dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="@string/price_text"
