--- a/app/src/main/res/layout/fragment_empty_orders.xml
+++ b/app/src/main/res/layout/fragment_empty_orders.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.main.cart.NoOrdersFragment">
+    tools:context=".ui.main.cart.CartEmptyFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
