--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -167,7 +167,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="@string/add_title"
+                    android:text="@string/address"
                     android:textColor="@color/primary"
                     android:textSize="14sp" />
             </LinearLayout>
