--- a/app/src/main/res/layout/fragment_menu_products.xml
+++ b/app/src/main/res/layout/fragment_menu_products.xml
@@ -49,6 +49,7 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="30dp"
         android:id="@+id/rv_products"
         android:nestedScrollingEnabled="false"
         android:layout_width="match_parent"
